<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/greyback">


    <LinearLayout
        android:id="@+id/warningcontainer"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:background="@drawable/dialog">

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/uploadwarning"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="20sp"
            android:paddingRight="10sp"
            android:ems="2"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog"
        android:layout_below="@+id/warningcontainer"
        android:layout_above="@+id/buttonpanel"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp">


        <LinearLayout
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:gravity="center"
            android:background="@drawable/dashed">

            <ImageView
                android:id="@+id/student"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:background="@drawable/pupil"
                android:layout_gravity="center"
                android:contentDescription="@string/upload"
                />

        </LinearLayout>



        <ImageView
            android:id="@+id/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/square" >

        <Button
            android:id="@+id/buttonCapture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/string_capture_image"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:height="60dp"
            android:layout_weight="1"
            android:elevation="5sp" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/string_upload_image"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:height="60dp"
            android:layout_weight="1"
            android:elevation="5sp" />

    </LinearLayout>

</RelativeLayout>

