<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" android:background="@color/login">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >



    <LinearLayout
        android:id="@+id/headercontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop="30sp"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/busbackcontainer"
        android:layout_width="270sp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="50sp"
        >

        <ImageView
            android:id="@+id/busback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buslogin"
            android:contentDescription="@string/bgdesc"
            />



    </LinearLayout>



    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundwhite"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/username"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />

            <EditText
                android:id="@+id/mobile"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColorHint="#fff"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:maxLength="10"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/roundwhite"
            android:layout_marginTop="10sp"
            >

            <ImageView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />


            <EditText
                android:imeActionLabel="Login"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#fff"
                android:textSize="15sp"
                android:layout_weight="1"
                android:maxLength="16"
                />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/roundcolor"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="50sp"
        >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/bg_login"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/login"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:elevation="5sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0sp"
        >

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:gravity="center"
                android:textColor="#FFF"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>