<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/register"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/register"
        android:scaleType="fitXY"
        android:contentDescription="@string/bgdesc" />

    <TextView
        android:id="@+id/header"
        android:layout_above="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="40sp"
        android:layout_marginBottom="80dp"/>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50sp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundwhite">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/username"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />

            <EditText
                android:inputType="text"
                android:id="@+id/name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/name"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                android:maxLength="32"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/roundwhite">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/email"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />

            <EditText
                android:id="@+id/emailad"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/email"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                android:inputType="textEmailAddress"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundwhite"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />

            <EditText
                android:id="@+id/pass"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:drawablePadding="10dp"
                android:textSize="13sp"
                android:maxLength="16"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/roundwhite"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/icondesc" />


            <EditText
                android:imeActionLabel="Signup"
                android:id="@+id/mob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/mobile"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:textSize="13sp"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="10"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/roundcolor"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30sp"
        >

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/bg_login"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/register"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:elevation="5sp"
            />

    </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            >

            <TextView
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btnlinktologin"
                android:textColor="#FFF"
                android:gravity="center"
                />
        </LinearLayout>



</RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
