<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/greyback"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginLeft="3sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/dialog"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/schoolspinner"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:paddingBottom="10sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop"
                android:contentDescription="@string/icondesc"
                />


        </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginLeft="3sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/dialog"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="4sp"
            android:layout_marginEnd="5sp"
            android:layout_marginLeft="4sp"
            android:layout_marginRight="5sp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_gravity="center">

                <TableRow android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:textSize="17sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:paddingTop="25sp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20sp"
                        android:text="@string/school"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/textViewSchool"
                        />

                </TableRow>

            </LinearLayout>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_gravity="center"
                >

                <TableRow android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:textSize="17sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:paddingTop="25sp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20sp"
                        android:text="@string/branch"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/textViewBranch"
                        />

                </TableRow>

            </LinearLayout>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </TableRow>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_gravity="center"
                >


                <TableRow android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    >

                    <TextView
                        android:textSize="17sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:paddingTop="25sp"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20sp"
                        android:text="@string/buses"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:id="@+id/textViewBuses"
                        />

                </TableRow>

            </LinearLayout>

        </TableLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/square"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/go"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/continue_next"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#fff"
            android:height="60dp"
            android:elevation="5sp"
            />


    </LinearLayout>

</LinearLayout>


